force-app/main/default/objects/Blueprint_Step__c/Blueprint_Step__c.object-meta.xml
<CustomObject>
    <label>Blueprint Step</label>
    <nameField>
        <label>Blueprint Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blueprint Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>