force-app/main/default/objects/Blueprint_Step__c/fields/Blueprint__c.field-meta.xml
<CustomField>
    <fullName>Blueprint__c</fullName>
    <label>Blueprint</label>
    <referenceTo>Blueprint__c</referenceTo>
    <relationshipLabel>Blueprint Steps</relationshipLabel>
    <relationshipName>Blueprint_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>