force-app/main/default/objects/Blueprint_Step__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>